--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="Donation">Please describe the donation</string>
     <string name="Submit">Submit</string>
     <string name="Cancel">Cancel</string>
-    <string name="foodRecovery">Food Recovery</string>
+    <string name="foodRecovery">(Under Construction)</string>
     <string name="msg_token_fmt" formatted="true">%s1</string>
     <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
 </resources>
